ui_tests/assignment_7.box
type B {
    | One {},
    | Two {},
}

fn bar() -> B {
    new B::One {}
}

fn foo() {
    new B::Two {}.field;
}